--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,20 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
+body {
+	font-size: 13px;
+}
 
+.banner {
+	height: 120px;
+}
 
+.header, .banner {
+	margin-bottom: 10px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.navbar .nav > li > p {
+  	float: none;
+  	padding: 10px 5px 0px;
+}
